# tomasulo

./: Cargo.toml
.github/workflows/: pages.yml  rust.yml
core/: Cargo.toml
core/src/: main.rs
core/src/comp/: mod.rs  pc.rs  reg.rs  rs.rs
core/test/: 1.s  asm.txt
egui/: Cargo.toml  Trunk.toml  index.html  rust-toolchain
egui/src/: app.rs
